Fixed dark mode (#68)
* Added themes and dark mode switch.

* Fixed div tags and cards

* Added dark mode to nav and burger menu.

* fixed some breakpoints.

* fixed some colors

* Revert "fixed some colors"

This reverts commit 91ebe37d2246a94ea4398c5b19be73244a5e7546.

--- a/client/src/pages/styles/CountdownTimer.css
+++ b/client/src/pages/styles/CountdownTimer.css
@@ -52,10 +52,15 @@
 	color: var(--secondary);
 }
 
-.startTimer {
-=======
+  .startTimer {
+    border: none;
+    border-radius: 10px;
+    margin-top: 10px;
+    color: var(--secondary);
+    background-color: var(--primary);
+    cursor: pointer;
     width: 100px;
-    height: 100px;
+    height: 30px;
     position: relative;
   }
 
@@ -106,14 +111,3 @@
     font-size: 30px;
     color: var(--secondary);
   }
-
-  .startTimer {
-	height: 30px;
-	width: 100%;
-	border: none;
-	border-radius: 10px;
-	margin-top: 10px;
-	color: var(--secondary);
-  background-color: var(--primary);
-	cursor: pointer;
-}
